syntax = "proto3";

package education;

option go_package = "grpc/proto/pb";

import "common.proto";

import "google/protobuf/empty.proto";



// room service start
service RoomService{
  rpc CreateRoom(CreateRoomRequest)returns(common.AbsResponse);
  rpc GetRooms(google.protobuf.Empty)returns(GetUpdateRoomAbs);
  rpc UpdateRoom(AbsRoom)returns(common.AbsResponse);
  rpc DeleteRoom(common.DeleteAbsRequest)returns(common.AbsResponse);
}

message CreateRoomRequest{
  string name = 1;
  int32 capacity = 2;
}

message GetUpdateRoomAbs{
  repeated AbsRoom rooms = 1;
}

message AbsRoom{
  string id = 1;
  int32 capacity = 2;
  string name = 3;
}


// room service end

// course service start
service CourseService{
  rpc CreateCourse(CreateCourseRequest)returns(common.AbsResponse);
  rpc GetCourses(google.protobuf.Empty)returns(GetUpdateCourseAbs);
  rpc GetCourseById(GetCourseByIdRequest)returns(GetCourseByIdResponse);
  rpc UpdateCourse(AbsCourse)returns(common.AbsResponse);
  rpc DeleteCourse(common.DeleteAbsRequest)returns(common.AbsResponse);
}

message CreateCourseRequest{
  string name = 1;
  int32 lessonDuration = 2;
  int32 courseDuration = 3;
  double price = 4;
  string description = 5;
}

message GetUpdateCourseAbs{
  repeated AbsCourse courses = 1;
}

message AbsCourse{
  string id = 6;
  string name = 1;
  int32 lessonDuration = 2;
  int32 courseDuration = 3;
  double price = 4;
  string description = 5;
}

message GetCourseByIdResponse{
  string id = 7;
  string name = 1;
  int32 lessonDuration = 2;
  int32 courseDuration = 3;
  double price = 4;
  string description = 5;
  int32 studentCount = 6;
}

message GetCourseByIdRequest{
  string id = 1;
}

// course service end